# emuchip8

./: .gitignore  CMakeLists.txt  README.md
include/: chip8.h  chip8app.h
include/glad/: glad.h
src/: chip8.cpp  chip8app.cpp  glad.c  main.cpp
